2005-07-07  Jb Evain  <jbevain@gmail.com>

	* *.*: use Mono coding conventions
	* Mono.Xml/*.*: update Mono.Xml from corlib

2005-07-02  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/IMethod.cs
	  Mono.Cecil/IProperty.cs
	  Mono.Cecil/IEvent.cs
	  Mono.Cecil/IField.cs
	  Mono.Cecil/ITypeDefinition.cs
	  Mono.Cecil.Implem/MethodDefinition.cs
	  Mono.Cecil.Implem/PropertyDefinition.cs
	  Mono.Cecil.Implem/EventDefinition.cs
	  Mono.Cecil.Implem/FieldDefinition.cs
	  Mono.Cecil.Implem/TypeDefinition.cs:
		Add some funky sugar attributes,
		more to come

2005-07-01  Jb Evain  <jbevain@gmail.com>

	* CodeGen/cecil-gen.rb,
	  CodeGen/templates/MetadataTableWriter.cs,
	  CodeGen/templates/MetadataRowWriter.cs,
	  Mono.Cecil.Metadata/MetadataTableWriter.cs,
	  Mono.Cecil.Metadata/MetadataRowWriter.cs,
	  Mono.Cecil.Metadata/MetadataWriter.cs:
		Add metadata writing visitors
	* Mono.Cecil.Metadata/CultureUtils.cs:
		Be sure to use every possible culture infos.
	* Mono.Cecil.Cil/IVariable.cs,
	  Mono.Cecil.Implem/VariableDefinition.cs,
	  Mono.Cecil.Implem/CodeReader.cs,
	  Mono.Cecil.Implem/CilEmitter.cs:
		Add an index property to local variables
	* Mono.Cecil.Metadata/MetadataReader.cs,
	  Mono.Cecil.Metadata/MetadataRowReader.cs,
	  CodeGen/templates/MetadataRowReader.cs,
	  Mono.Cecil.Metadata/TablesHeap.cs:
		Handles null heaps
	* Mono.Cecil.Implem/StructureWriter.cs,
	  Mono.Cecil.Implem/ReflectionController.cs,
	  Mono.Cecil.Implem/ReflectionWriter.cs:
		Assemble writing classes

2005-06-28  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil.Implem/ReflectionReader.cs: style
	* Mono.Cecil.Implem/LazyReflectionReader.cs:
		read the last property as well.

2005-06-21  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil.Implem/ReflectionReader.cs: Correct a bug that prevents
		assemblies to be readed if they have an entrypoint. Suggestion by
		Mario Sopena
	* Mono.Cecil.Implem/CodeReader.cs: Use sbyte not to lose negatives
		offsets. Suggestion by Vladislav Spivak